...
    <string name="INTENT_KEY_EXTRAORDINARIAS" translatable="false">extraordinarias</string>
    <string name="INTENT_KEY_INVES_ACTIVADO" translatable="false">inv_activado</string>
    <string name="INTENT_LINK_GRAFICO" translatable="false">link_grafico</string>

    <!--Dialog -->
    <string name="DIALOG_MESSAGE_ENTREVISTA">Are you sure that you want to delete this interview?</string>
    <string name="DIALOG_POSITIVE_BTN">Delete</string>
    <string name="DIALOG_NEGATIVE_BTN">Cancel</string>
    <string name="DIALOG_NEUTRAL_BTN_CLEAR">CLEAR ALL</string>
    <string name="DIALOG_MESSAGE_ENTREVISTADO">Are you sure that you want to delete this interviewee?</string>
    <string name="DIALOG_MESSAGE_EVENTO">Are you sure that you want to delete this event?</string>
    <string name="DIALOG_ACTIVACION_MENSAJE">Account activation will grant the researcher access to the system, are you sure?</string>
    <string name="DIALOG_ACTIVAR">Activate</string>
    <string name="DIALOG_DESACTIVACION_MENSAJE">Account deactivation will prohibit the researcher from accessing the system, are you sure?</string>
...
    <string name="NOTIFICACION_INTENT_ACTIVADO" translatable="false">notificacionActivaciones</string>


    <!-- Menu -->
    <string name="MENU_ENTREVISTADO_INFO_BASICA">Show basic information</string>
    <string name="MENU_ENTREVISTADO_EDITAR">Edit interviewee</string>
    <string name="MENU_ENTREVISTADO_VER_ENTREVISTAS">Show interviews</string>
    <string name="MENU_ENTREVISTADO_ELIMINAR">Delete interviewee</string>
    <string name="MENU_ACTUALIZAR">Update</string>
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
    <string name="MENU_ADMIN">Admin</string>
    <string name="MENU_ACCIONES">Actions</string>
    <string name="MENU_EMOTICONES">Emoticons</string>
...
    <string name="CAMBIAR_PASS">Change password</string>
    <string name="ICONO_PASS_INVESTIGADOR">Investigator password icon</string>
    <string name="CONFIRMAR_NUEVA_PASS">Confirm new password</string>
    <string name="ICONO_USUARIO">User photo</string>
    <string name="NOMBRE_PERSONA">Person name</string>
    <string name="TV_NORMALES">Normals</string>
    <string name="TV_EXTRAORDINARIAS">Extraordinary</string>
    <string name="ICONO_N_ENTREVISTAS">Interviews number icon</string>
    <string name="MSG_LISTADO_ENTREVISTAS_VACIO">No interviews for this person yet</string>
    <string name="MSG_LISTADO_EVENTOS_VACIOS">No events for this interview yet</string>
    <string name="CONTRASEÑA">Password</string>
    <string name="CUENTA_OLVIDADA">Did you forget your account?</string>
    <string name="INICIAR_SESION">Log in</string>
...
    <string name="OLVIDAR_CONTRASEÑA">Forgot password?</string>
    <string name="INTRUCCIONES_RECUPERACION">Enter your email to send you account recovery instructions</string>
    <string name="REGISTRAR">Register</string>
    <string name="NUEVA_CONTRASEÑA">New password</string>
    <string name="NUEVA_PASS_INTRUCCIONES">Please, enter a new password</string>
    <string name="FECHA_REGISTRO_ENTREVISTA">Registry date</string>
    <string name="ICONO_MENU_CONTEXTUAL">Contextual menu icon</string>
    <string name="MSG_LISTADO_ENTREVISTADOS_VACIO">You don\'t have interviewees yet</string>
    <string name="EMOTICON">Emoticon</string>
    <string name="EMOTICON_EVENTO">Event emoticon</string>
    <string name="GUION" translatable="false">-</string>
    <string name="CARGAR_MAS">Load more</string>
    <string name="EMOTICON_SPINNER">Dropdown menu emoticon</string>
...
    <string name="interviewees">Interviewees</string>
    <string name="interviewee_filter_icon">Interviewee filter icon</string>
    <string name="title_dialog_selected_interviewee">Selected Interviewee</string>
    <string name="clear_all">Clear all</string>
    <string name="proyectos">Projects</string>
    <string name="project_filter_icon">Project filter icon</string>
    <string name="ok" translatable="false">OK</string>
    <string name="select_project">Select a project</string>
    <string name="to_show_charts_please_open_bottom_menu_and_press_filter_button">To show charts, please open bottom menu and press filter button</string>
    <string name="stats_fragment_error_msg">Failed to load data, please refresh</string>


</resources>
...
