<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_interview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
...
            android:fontFamily="@font/roboto"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnPrimary"
            android:textSize="12sp"
            android:textStyle="italic"
            card_view:layout_constraintBottom_toBottomOf="@+id/tv_interview_registry_date_title"
            card_view:layout_constraintEnd_toStartOf="@+id/iv_menu_interview"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/tv_interview_registry_date_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_interview_name"
            card_view:layout_constraintVertical_bias="1.0"
            tools:text="22/12/2019" />

...
