...
            android:gravity="center"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorOnPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/switch_list"
            app:layout_constraintStart_toStartOf="@+id/rv_interviewee_list"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Mostrando X de XX interviewees" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
...
