<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_edit_interview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.EditInterviewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_horizontal_edit_interview"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:visibility="visible" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">


                <ImageView
                    android:id="@+id/iv_icon_interview_date"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_FECHA_ENTREVISTA"
                    app:layout_constraintBottom_toBottomOf="@+id/il_interview_date"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_interview_date"
                    app:srcCompat="@drawable/ic_date_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_interview_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/FECHA_ENTREVISTA"
                    app:endIconDrawable="@drawable/ic_date_black_24dp"
                    app:endIconMode="custom"
                    app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_interview_date"
                    app:layout_constraintTop_toBottomOf="@+id/il_interview_type">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_interview_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/roboto"
                        android:inputType="date"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_interview_type"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_TIPO_ENTREVISTA"
                    app:layout_constraintBottom_toBottomOf="@+id/il_interview_type"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_interview_type"
                    app:srcCompat="@drawable/ic_interview_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <!-- Autocompletado con selector de opciones fijo (SPINNER)-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_interview_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/TIPO_ENTREVISTA"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_interview_type"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/et_interview_type"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:completionThreshold="1"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/roboto"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textSize="16sp"
                        tools:text="Tipo interview" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_izq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_der"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <include
                    layout="@layout/quick_tip_interviews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toBottomOf="@+id/il_interview_date" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>